# VocabularyPy

./: .gitignore  app  pyproject.toml
lib/: typer.py
vocabulary/: data.py
vocabulary/database/: crud.py  session.py  table.py
